TEST_EXTENSIONS = .data
DATA_LOG_COMPILER = ./run_test.pl

TESTS = \
test_1.data \
test_2.data \
test_3.data \
test_4.data \
test_5.data \
test_6.data \
test_7.data \
test_8.data \
test_9.data \
test_10.data \
test_11.data \
test_12.data \
test_13.data \
test_14.data \
test_15.data \
test_16.data \
test_17.data \
test_18.data \
test_19.data \
test_20.data \
test_21.data \
test_22.data \
test_23.data \
test_24.data \
test_25.data \
test_26.data \
test_27.data \
test_28.data \
test_29.data \
test_30.data \
test_31.data \
test_32.data \
test_33.data \
test_34.data \
test_35.data \
test_36.data \
test_37.data \
test_38.data \
test_39.data \
test_40.data \
test_41.data \
test_42.data \
test_43.data \
test_44.data \
test_45.data \
test_46.data \
test_47.data \
test_48.data \
test_49.data \
test_50.data \
test_51.data \
test_52.data \
test_53.data \
test_54.data \
test_55.data \
test_56.data \
test_57.data \
test_58.data \
test_59.data \
test_60.data \
test_61.data \
test_62.data \
test_63.data \
test_64.data \
test_65.data \
test_66.data \
test_67.data \
test_68.data \
test_69.data \
test_70.data \
test_71.data \
test_72.data \
test_73.data \
test_74.data \
test_75.data \
test_76.data
