SUBDIRS=Generators

EXTRA_DIST= \
  alternateFIFO.net \
  fms5.net \
  Petrucci/5AGV_controlled.net \
  Petrucci/5AGV.eps \
  Petrucci/5AGV.net \
  Petrucci/5AGV.pn \
  Petrucci/prop \
  Petrucci/prop2 \
  philo2.100.net \
  philo2.20.net \
  philo2.5.net \
  simple.net \
  alternateInhibitor.net \
  fms10.net \
  Garavel/benchResults.txt \
  Garavel/Lotos-Garavel.net \
  Garavel/origin.txt \
  Garavel/quasi-live.prop \
  kanban5.net \
  pgcd.net \
  philo2.10.net \
  philo2.50.net \
  ring10.net


