noinst_PROGRAMS = Kanban FMS philo ring robin

Kanban_LDFLAGS = -static-libgcc -static-libstdc++ $(LDFLAGS)
FMS_LDFLAGS = -static-libgcc -static-libstdc++ $(LDFLAGS)
philo_LDFLAGS = -static-libgcc -static-libstdc++ $(LDFLAGS)
ring_LDFLAGS = -static-libgcc -static-libstdc++ $(LDFLAGS)
robin_LDFLAGS = -static-libgcc -static-libstdc++ $(LDFLAGS)

Kanban_SOURCES = Kanban.cpp 
FMS_SOURCES =  FMS.cpp 
philo_SOURCES = philo.cpp
ring_SOURCES = ring.cpp
robin_SOURCES = robin.cpp
