noinst_PROGRAMS = philo philob mutex MutexMefosyloma

philo_LDFLAGS = -static-libgcc -static-libstdc++ $(LDFLAGS)
philob_LDFLAGS = -static-libgcc -static-libstdc++ $(LDFLAGS)
mutex_LDFLAGS = -static-libgcc -static-libstdc++ $(LDFLAGS)
mutexMefosyloma_LDFLAGS = -static-libgcc -static-libstdc++ $(LDFLAGS)

mutex_SOURCES = mutex.cpp 
philo_SOURCES = philo.cpp
philob_SOURCES = philob.cpp
MutexMefosyloma_SOURCES = MutexMefosyloma.cpp